syntax = "proto3";

package envoy.extensions.grpc_stream_demuxer.v3alpha;

import "udpa/annotations/migrate.proto";
import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.extensions.grpc_stream_demuxer.v3alpha";
option java_outer_classname = "GrpcStreamDemuxerProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).work_in_progress = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

message GrpcStreamDemuxer {
  string subscription = 1;

  string address = 2;

  uint32 port = 3;
}
