syntax = "proto3";

package envoy.service.pubsub.v3alpha;

import "google/protobuf/empty.proto";
import "google/pubsub/v1/pubsub.proto";

import "udpa/annotations/migrate.proto";
import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.service.pubsub.v3alpha";
option java_outer_classname = "ReceivedMessageProto";
option java_multiple_files = true;
option java_generic_services = true;
option (udpa.annotations.file_status).work_in_progress = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

service ReceivedMessageService {
  rpc SendReceivedMessage(google.pubsub.v1.ReceivedMessage) returns (google.protobuf.Empty) {
  }
}
